# HumanMint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
docs/: ADVANCED.md  FIELDS.md
docs/use_cases/: GOVERNMENT_CONTACTS.md  HR_SALESFORCE.md  README.md
manual_tests/: gliner_manual_test.py  real_world_test_results.json  test.py  test10.py  test11.py  test_basic_messy_person_example.py  test_department_edge_cases.py  test_dirty_data_scenarios.py  test_docs_examples.py  test_garbled_mode.py  test_government_nightmare_cases.py  test_messy_real_world_record.py  test_minimal_smoke_test.py  test_pandas_ext.py  test_pandas_extension_advanced.py  test_police_department_scenarios.py  test_real_world_extra.py  test_real_world_scenarios.py  test_school_district_scenarios.py  test_single_record_normalization.py  test_unicode_normalization.py
scripts/: build_caches.py  build_department_categories.py  build_pickles.py  merge_semantic_tokens.py
src/humanmint/: __init__.py  cli.py  column_guess.py  compare.py  export.py  gliner.py  mint.py  pandas_ext.py  processors.py  semantics.py  text_clean.py  types.py
src/humanmint/addresses/: normalize.py
src/humanmint/constants/: names.py  titles.py
src/humanmint/data/: utils.py
src/humanmint/data/original/: bls_titles.json  department_abbreviations.txt  department_mappings_list.csv  department_mappings_list.txt  free_email_providers.txt  generic_inboxes.txt  name_corporate_terms.txt  name_credential_suffixes.txt  name_generational_suffixes.txt  name_non_person_phrases.txt  name_placeholder_names.txt  name_roman_numerals.txt  name_title_prefixes.txt  names.csv  names.txt  semantic_tokens.json  semantic_tokens.txt  seniority_keywords.txt  title_abbreviations.txt  title_heuristics.txt  title_preserve_abbreviations.txt  title_stopwords.txt
src/humanmint/departments/: __init__.py  categories.py  data_loader.py  matching.py  normalize.py
src/humanmint/emails/: __init__.py  _pattern_definitions.py  classifier.py  normalize.py  patterns.py
src/humanmint/names/: __init__.py  enrichment.py  garbled.py  matching.py  normalize.py
src/humanmint/organizations/: normalize.py
src/humanmint/phones/: __init__.py  detect.py  normalize.py
src/humanmint/titles/: __init__.py  api.py  bls_loader.py  data_loader.py  enhancements.py  matching.py  normalize.py
tests/: test4.py  test5.py  test7.py  test8.py  test9.py  test_basic_messy_person_example.py  test_bls_integration.py  test_data_quality_audit.py  test_department_edge_cases.py  test_dirty_data_scenarios.py  test_docs_examples.py  test_export.py  test_extreme_edge_cases.py  test_garbled_mode.py  test_government_nightmare_cases.py  test_name_parsing_variants.py  test_pandas_extension.py  test_pandas_extension_advanced.py  test_pandas_heuristic_guessing.py  test_performance_stress_test.py  test_police_department_scenarios.py  test_real_world_extra.py  test_real_world_scenarios.py  test_school_district_scenarios.py  test_single_record_normalization.py  test_unicode_normalization.py
unittests/: conftest.py  test_addresses_country.py  test_all_properties.py  test_api_reference.py  test_bulk.py  test_cli.py  test_compare.py  test_consistency.py  test_department_edge_cases.py  test_departments.py  test_emails.py  test_export.py  test_garbled_mode.py  test_get_accessor.py  test_gliner.py  test_government_150_records.py  test_job_titles.py  test_many.py  test_mint.py  test_names.py  test_new_features.py  test_osi.py  test_pandas_ext copy.py  test_pandas_ext.py  test_phones.py  test_real_scenarios.py  test_semantics.py  test_split_names.py  test_titles.py
